--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,10 @@
-set(FHASH_SOURCES fhash.f90 fhash_sll.f90 fhash_data_container.f90 fhash_tbl.f90 fhash_tbl_iter.f90 fhash_fnv.f90 fhash_key/base.f90 fhash_key/int32.f90 fhash_key/int64.f90 fhash_key/char.f90 fhash_key/int32_1d.f90 fhash_key/int64_1d.f90)
+set(FHASH_SOURCES 
+  fhash.f90 
+  fhash_sll.f90 
+  fhash_data_container.f90 
+  fhash_tbl.f90 fhash_tbl_iter.f90 fhash_fnv.f90 
+  fhash_key/base.f90 fhash_key/int32.f90 
+  fhash_key/int64.f90 fhash_key/char.f90 fhash_key/int32_1d.f90 fhash_key/int64_1d.f90)
 
 if (FHASH_STATIC_LIBRARY)
   add_library(fhash STATIC ${FHASH_SOURCES})
@@ -6,9 +12,9 @@ else()
   add_library(fhash SHARED ${FHASH_SOURCES})
 endif()
 
-
 target_include_directories(fhash PUBLIC
   $<BUILD_INTERFACE:${CMAKE_Fortran_MODULE_DIRECTORY}>
   $<INSTALL_INTERFACE:${Fortran_MODULE_DIRECTORY}>)
 install(TARGETS fhash EXPORT fhash
-  LIBRARY DESTINATION lib ${CMAKE_INSTALL_LIBDIR})
+  #LIBRARY DESTINATION lib ${CMAKE_INSTALL_LIBDIR}
+)
